--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -21,10 +21,13 @@ header .container {
   width: 100%;
 }
 
-.navbar-form .form-control {
-  width: 188px;
+.navbar-input-group {
+    display: inline;
 }
 
+.navbar-input-group-btn{
+    float: left;
+}
 .profile {
   float: right;
   clear: both;
