--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -36,23 +36,25 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="{% url 'main' %}">Home</a></li>
-						<li><a href="#">My Recipes</a></li>
-						<li><a href="#">Friends</a></li>
-						<li><a href="#">Recipes</a></li>
+                        <li><a href="#">My Recipes</a></li>
+                        <li><a href="#">Friends</a></li>
+                        <li><a href="#">Recipes</a></li>
                         <li><a href="#">Explore</a></li>
                         <li class="divider-vertical"></li>
-                        <div class="input-group">
-                            <form class="navbar-form navbar-right" role="search">
-                                <input type="text" class="form-control" placeholder="Search..." name="srch-term"
-                                       id="srch-term">
-                                <span class="input-group-btn">
+                    </ul>
+
+                    <div class="input-group navbar-input-group">
+                        <form class="navbar-form navbar-left" role="search">
+                            <input type="text" class="form-control" placeholder="Search..." name="srch-term"
+                                   id="srch-term">
+                                <span class="input-group-btn navbar-input-group-btn">
                                     <button class="btn btn-default" type="submit">
                                         <i class="glyphicon glyphicon-search"></i>
                                     </button>
                                 </span>
-                            </form>
-                        </div>
-                    </ul>
+                        </form>
+                    </div>
+
                     <ul class="nav navbar-nav navbar-right">
                         {% if user.is_authenticated %}
                             <li><p class="navbar-text">{% trans "Hello" %}, {{ user.profile.get.display_name }}.</p>
