Cambios en colores de progress bar de la plantilla receta. Cambiado estilo de boton "Cargar mas" en pantalla principal. Añadida descripcion en tarjetas de pantalla principal. Corregido los porcentajes de los progress bar de la pantalla de receta.

--- a/static/webapp/css/slider.css
+++ b/static/webapp/css/slider.css
@@ -201,7 +201,8 @@
     background: #c52323;
 }
 
-#spicy .slider-handle {
+#spicy .slider-handle ,
+{
     background: #c52323;
 }
 
@@ -209,4 +210,6 @@
     margin-bottom: 0px;
     margin-top: 8px;
 }
+
+
 
