--- a/templates/webapp/main.html
+++ b/templates/webapp/main.html
@@ -15,7 +15,7 @@
 				<h1>{{ recipe.title }}</h1>
             </div>
 			<div class="description-recipe-main">
-				<p>{{ recipe.desciption }}</p>
+				<p>{{ recipe.description }}</p>
 			</div>
 			<div class="caption">
 				<div class="recipe-time">
@@ -45,7 +45,7 @@
 	</div>
 	<div class="col-sm-6 col-md-4"></div>
 	<div class="col-sm-6 col-md-4">
-		<button type="button" class="btn btn-danger btn-block">Cargar m&aacute;s recetas</button>
+		<button type="button" class="btn btn-default plus btn-block btn-cargarmas">Cargar m&aacute;s recetas</button>
 	</div>
 	<div class="col-sm-6 col-md-4"></div>
 	
