--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -165,9 +165,8 @@
                 <h5>Salty</h5>
 
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                         aria-valuemax="100" style="width: 60%;">
-                        {{ receta.savours.salty }}
+                    <div class="progress-bar" id="salty" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                         aria-valuemax="100" style="width: {{ receta.savours.salty }}%;">
                     </div>
                 </div>
             </div>
@@ -175,9 +174,8 @@
                 <h5>Sour</h5>
 
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                         aria-valuemax="100" style="width: 80%;">
-                        {{ receta.savours.sour }}
+                    <div class="progress-bar" id="sour" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                         aria-valuemax="100" style="width: {{ receta.savours.sour }}%;">
                     </div>
                 </div>
             </div>
@@ -185,9 +183,8 @@
                 <h5>Bitter</h5>
 
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                         aria-valuemax="100" style="width: 60%;">
-                        {{ receta.savours.bitter }}
+                    <div class="progress-bar" id="bitter" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                         aria-valuemax="100" style="width: {{ receta.savours.bitter }}%;">
                     </div>
                 </div>
             </div>
@@ -195,9 +192,8 @@
                 <h5>Sweet</h5>
 
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                         aria-valuemax="100" style="width: 60%;">
-                        {{ receta.savours.sweet }}
+                    <div class="progress-bar" id="sweet" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                         aria-valuemax="100" style="width: {{ receta.savours.sweet }}%;">
                     </div>
                 </div>
             </div>
@@ -205,9 +201,8 @@
                 <h5>Spicy</h5>
 
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                         aria-valuemax="100" style="width: 60%;">
-                        {{ receta.savours.spicy }}
+                    <div class="progress-bar" id="spicy" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                         aria-valuemax="100" style="width: {{ receta.savours.spicy }}%;">
                     </div>
                 </div>
             </div>
