Corregido fallo al mostrar imagen.

--- a/templates/webapp/profile.html
+++ b/templates/webapp/profile.html
@@ -10,7 +10,8 @@
 			<div class="col-md-4">
 				<!-- Thumbnails -->
 				<div class="thumbnail">
-					<img alt="" src="{{profile.avatar}}">
+					<img alt="" src="{% if user.profile.get.avatar %}{{ user.profile.get.avatar.url }}
+                                    {% else %}{% static 'webapp/image/profile_pic_anon.png' %}{% endif %}">
 					<br />
 					<ul class="list-group custom-set">
 						<li class="list-group-item"><span class="badge">10</span>Recipes</li>
