Corregido error con la url de edicion de perfil, que se confundia. Añadida a la vista perfil un link para editar el perfil.  Corregido pequeño fallo con el color del extremo de la barra de configuracion del perfil del sabor que no era del mismo color que la barra.

--- a/templates/webapp/profile.html
+++ b/templates/webapp/profile.html
@@ -20,7 +20,8 @@
 					<br />
 					<!--<a type="button" class="btn btn-default btn-danger btn-block  "><span class="glyphicon glyphicon-ok"></span> Siguiendo</a>-->
 					<a type="button" class="btn btn-default plus-profile btn-block btn-cargarmas" disabled>Seguir</a>
-				</div><!-- /Thumbnails -->		
+				</div><!-- /Thumbnails -->
+				<a href="{% url 'profile_edit' user.username %}">Editar perfil</a>
 			</div>
 			<div class="col-md-8 left-block">
 				<div class="info-block">
