Muestra en el perfil un botón de seguir / dejar de seguir, según si el usuario está siguiendo o no al otro, o de si está viendo su propio perfil.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -447,11 +447,32 @@ header .container {
 }
 
 .plus-profile {
-color: #CC3E27;
+    color: #CC3E27;
 }
 
 .plus-profile:hover{
     color: #fff;
     background-color: #CC3E27;
     border-color: #D66552;
+}
+
+.btn-follow{
+    color: #CC3E27;
+}
+
+.btn-follow:hover{
+    color: #fff;
+    background-color: #CC3E27;
+    border-color: #D66552;
+}
+
+.btn-unfollow{
+    color: #fff;
+    background-color: #CC3E27;
+    border-color: #D66552;
+}
+
+.btn-unfollow:hover{
+    color: #CC3E27;
+    background-color: #eaaea4;
 }
