Terminada de implementar funcionalidad para seguir y dejar de seguir a un usuario.
Añadido a profile.hmt lo necesario para que los botones de follow/unfollow manden una petición AJAX para ejecutar la acción.
Muestra un cuadro de alert bajo el botón tanto si ha ido bien como si no.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -472,7 +472,20 @@ header .container {
     border-color: #D66552;
 }
 
+.btn-unfollow[disabled]{
+    color: #CC3E27;
+    opacity: .65;
+}
+
 .btn-unfollow:hover{
     color: #CC3E27;
     background-color: #eaaea4;
+}
+
+.alert-follow {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 8px;
+    display: none;
+
 }
