--- a/templates/webapp/profile.html
+++ b/templates/webapp/profile.html
@@ -3,258 +3,268 @@
 {% load i18n %}
 
 {% block container %}
-	
-	<div class="container demo">
-		
-		<div class="row show-grid">
-			<div class="col-md-4">
-				<!-- Thumbnails -->
-				<div class="thumbnail">
-					<img alt="" src="{% if user.profile.get.avatar %}{{ user.profile.get.avatar.url }}
+
+    <div class="container demo">
+
+    <div class="row show-grid">
+    <div class="col-md-4">
+        <!-- Thumbnails -->
+        <div class="thumbnail">
+            <img alt="" src="{% if user.profile.get.avatar %}{{ user.profile.get.avatar.url }}
                                     {% else %}{% static 'webapp/image/profile_pic_anon.png' %}{% endif %}">
-					<br />
-					<ul class="list-group custom-set">
-						<li class="list-group-item"><span class="badge">10</span>Recipes</li>
-						<li class="list-group-item"><span class="badge">11</span>Friendas</li>
-					</ul>
-					<br />
-					<!--<a type="button" class="btn btn-default btn-danger btn-block  "><span class="glyphicon glyphicon-ok"></span> Siguiendo</a>-->
-					<a type="button" class="btn btn-default plus-profile btn-block btn-cargarmas" disabled>Seguir</a>
-				</div><!-- /Thumbnails -->
-				<a href="{% url 'profile_edit' user.username %}">Editar perfil</a>
-			</div>
-			<div class="col-md-8 left-block">
-				<div class="info-block">
-					<div class="recipe-name">
-						<h1>{{ profile.display_name}}</h1>
-					</div>
+            <br/>
+            <ul class="list-group custom-set">
+                <li class="list-group-item"><span class="badge">10</span>Recipes</li>
+                <li class="list-group-item"><span class="badge">11</span>Friendas</li>
+            </ul>
+            <br/>
+            <!--<a type="button" class="btn btn-default btn-danger btn-block  "><span class="glyphicon glyphicon-ok"></span> Siguiendo</a>-->
+            <a type="button" class="btn btn-default plus-profile btn-block btn-cargarmas" disabled>Seguir</a>
+        </div>
+        <!-- /Thumbnails -->
+        <a href="{% url 'profile_edit' user.username %}">Editar perfil</a>
+    </div>
+    <div class="col-md-8 left-block">
+    <div class="info-block">
+    <div class="recipe-name">
+        <h1>{{ profile.display_name }}</h1>
+    </div>
 
-					<legend>Informaci&oacute;n b&aacute;sica</legend>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<h4>Email</h4>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<h4>Idioma</h4>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<p>{{profile.user.email}}</p>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<p>{{profile.main_language}}<p>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<h4>Fecha de registro</h4>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<h4></h4>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<p>{{profile.user.date_joined.date}}</p>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<p><p>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-					</div>
-					<legend>Informaci&oacute;n del usuario</legend>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<h4>Sitio web</h4>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<h4>G&eacute;nero</h4>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<p >{{profile.website}}</p>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<p >{{profile.gender}}</p>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-					</div>
-					{% if request.user.username == profile.user.username %}
-					<legend>Informaci&oacute;n personal</legend>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<h4>Nombre</h4>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<h4>Apellidos</h4>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<p>{{profile.user.fist_name}}</p>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<p>{{profile.user.last_name}}<p>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<h4>Fecha de nacimiento</h4>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<h4>&Uacute;ltimo login</h4>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<p>{{profile.birth_date}}</p>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="col-md-10">
-								<p><p>
-							</div>
-							<div class="col-md-10">
-								
-							</div>
-						</div>
-					</div>
-					{% endif %}
-					<legend>Perfil de savores</legend>
-					<div class="recipe-taste">
-                <h5>Sour</h5>
-                <div class="progress">
-					<div class="progress-bar" id="sour" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-						 aria-valuemax="100" style="width: {{ profile.tastes.sour }}%;">
-					</div>
-				</div>
-						</div>
-						<div class="recipe-taste">
-							<h5>Bitter</h5>
+    <legend>Informaci&oacute;n b&aacute;sica</legend>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="col-md-10">
+                <h4>Email</h4>
+            </div>
+            <div class="col-md-10">
 
-							<div class="progress">
-								<div class="progress-bar" id="bitter" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-									 aria-valuemax="100" style="width: {{ profile.tastes.bitter }}%;">
-								</div>
-							</div>
-						</div>
-						<div class="recipe-taste">
-							<h5>Sweet</h5>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="col-md-10">
+                <h4>Idioma</h4>
+            </div>
+            <div class="col-md-10">
 
-							<div class="progress">
-								<div class="progress-bar" id="sweet" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-									 aria-valuemax="100" style="width: {{ profile.tastes.sweet }}%;">
-								</div>
-							</div>
-						</div>
-						<div class="recipe-taste">
-							<h5>Spicy</h5>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="col-md-10">
+                <p>{{ profile.user.email }}</p>
+            </div>
+            <div class="col-md-10">
 
-							<div class="progress">
-								<div class="progress-bar" id="spicy" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-									 aria-valuemax="100" style="width: {{ profile.tastes.spicy }}%;">
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-						
-			</div>
-		</div>
-	</div>
-	
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="col-md-10">
+                <p>
+
+                {{ profile.main_language }}<p>
+            </div>
+            <div class="col-md-10">
+
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="col-md-10">
+                <h4>Fecha de registro</h4>
+            </div>
+            <div class="col-md-10">
+
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="col-md-10">
+                <h4></h4>
+            </div>
+            <div class="col-md-10">
+
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="col-md-10">
+                <p>{{ profile.user.date_joined.date }}</p>
+            </div>
+            <div class="col-md-10">
+
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="col-md-10">
+                <p>
+
+                <p>
+            </div>
+            <div class="col-md-10">
+
+            </div>
+        </div>
+    </div>
+    <legend>Informaci&oacute;n del usuario</legend>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="col-md-10">
+                <h4>Sitio web</h4>
+            </div>
+            <div class="col-md-10">
+
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="col-md-10">
+                <h4>G&eacute;nero</h4>
+            </div>
+            <div class="col-md-10">
+
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="col-md-10">
+                <p>{{ profile.website }}</p>
+            </div>
+            <div class="col-md-10">
+
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="col-md-10">
+                <p>{{ profile.gender }}</p>
+            </div>
+            <div class="col-md-10">
+
+            </div>
+        </div>
+    </div>
+    {% if request.user.username == profile.user.username %}
+        <legend>Informaci&oacute;n personal</legend>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="col-md-10">
+                    <h4>Nombre</h4>
+                </div>
+                <div class="col-md-10">
+
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="col-md-10">
+                    <h4>Apellidos</h4>
+                </div>
+                <div class="col-md-10">
+
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="col-md-10">
+                    <p>{{ profile.user.fist_name }}</p>
+                </div>
+                <div class="col-md-10">
+
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="col-md-10">
+                    <p>
+
+                    {{ profile.user.last_name }}<p>
+                </div>
+                <div class="col-md-10">
+
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="col-md-10">
+                    <h4>Fecha de nacimiento</h4>
+                </div>
+                <div class="col-md-10">
+
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="col-md-10">
+                    <h4>&Uacute;ltimo login</h4>
+                </div>
+                <div class="col-md-10">
+
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="col-md-10">
+                    <p>{{ profile.birth_date }}</p>
+                </div>
+                <div class="col-md-10">
+
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="col-md-10">
+                    <p>
+
+                    <p>
+                </div>
+                <div class="col-md-10">
+
+                </div>
+            </div>
+        </div>
+    {% endif %}
+    <legend>Perfil de savores</legend>
+    <div class="recipe-taste">
+        <h5>Sour</h5>
+
+        <div class="progress">
+            <div class="progress-bar" id="sour" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                 aria-valuemax="100" style="width: {{ profile.tastes.sour }}%;">
+            </div>
+        </div>
+    </div>
+    <div class="recipe-taste">
+        <h5>Bitter</h5>
+
+        <div class="progress">
+            <div class="progress-bar" id="bitter" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                 aria-valuemax="100" style="width: {{ profile.tastes.bitter }}%;">
+            </div>
+        </div>
+    </div>
+    <div class="recipe-taste">
+        <h5>Sweet</h5>
+
+        <div class="progress">
+            <div class="progress-bar" id="sweet" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                 aria-valuemax="100" style="width: {{ profile.tastes.sweet }}%;">
+            </div>
+        </div>
+    </div>
+    <div class="recipe-taste">
+        <h5>Spicy</h5>
+
+        <div class="progress">
+            <div class="progress-bar" id="spicy" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                 aria-valuemax="100" style="width: {{ profile.tastes.spicy }}%;">
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+
+    </div>
+    </div>
+    </div>
+
 {% endblock %}
