Corregido bug #36 para el perfil, falta para las recetas.

--- a/templates/webapp/newaccount.html
+++ b/templates/webapp/newaccount.html
@@ -208,7 +208,11 @@
                         id="id_{{ form.main_language.name }}" name="{{ form.main_language.name }}">
                     {% for choice in form.main_language.field.choices %}
                         {% comment %}TODO Opción preseleccionada!!!{% endcomment %}
-                        <option value="{{ choice.0 }}">{{ choice.1 }}</option>
+                        <option value="{{ choice.0 }}"
+                                {% ifequal form.main_language.value choice.0 %}
+                                selected
+                                {% endifequal %}
+                                >{{ choice.1 }}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -224,7 +228,14 @@
                 <select class="form-control show-tick" multiple data-live-search="true"
                         id="id_{{ form.additional_languages.name }}" name="{{ form.additional_languages.name }}">
                     {% for choice in form.additional_languages.field.choices %}
-                        <option value="{{ choice.0 }}">{{ choice.1 }}</option>
+                        <option value="{{ choice.0 }}"
+                                {% for opt in form.additional_languages.value %}
+                                    {% ifequal opt choice.0 %}
+                                selected
+                                    {% endifequal %}
+                                {% endfor %}
+                                >{{ choice.1 }}
+                        </option>
                     {% endfor %}
                 </select>
             </div>
@@ -239,7 +250,11 @@
                 <select class="form-control show-tick"
                         id="id_{{ form.gender.name }}" name="{{ form.gender.name }}">
                     {% for choice in form.gender.field.choices %}
-                        <option value="{{ choice.0 }}">{{ choice.1 }}</option>
+                        <option value="{{ choice.0 }}"
+                                {% ifequal form.gender.value choice.0 %}
+                                selected
+                                {% endifequal %}
+                                >{{ choice.1 }}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -290,7 +305,8 @@
                 -->
             <div class="col-sm-3">
                 <div id="drop-target" class="drag-and-drop avatar-drop">
-                    <img id="avatar-target" class="img-rounded img-responsive" src="{{ form.avatar_url.value|default_if_none:'' }}">
+                    <img id="avatar-target" class="img-rounded img-responsive"
+                         src="{{ form.avatar_url.value|default_if_none:'' }}">
                     <input type="hidden" id="id_{{ form.avatar_url.name }}" name="{{ form.avatar_url.name }}">
                     <input type="hidden" id="id_{{ form.avatar_id.name }}" name="{{ form.avatar_id.name }}">
                 </div>
