--- a/templates/webapp/following.html
+++ b/templates/webapp/following.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block container %}
-	
+{% if user.is_authenticated %}
 	<div class="row">
 		<div class="col-md-2">
 			
@@ -45,6 +45,9 @@
 		</div>
 	</div>
 	{% endfor %}
+{% else %}
+    <h2>Por favor haga login <a href="{% url 'login' %}"> aqu&iacute;</a>.</h2>
+{% endif %}
 	<br />
 	<br />
 	<br />
