Eliminado el link de la barra de navegacion de seguidores ya que se pasa a la vista de profile. Eliminado un if que introduje sin sentido en la vista de following. Profile linka con los seguidores a falta de mas datos de pruebas y muestra el numero de recetas y personas que se siguen. El modelo ha sido modificado para poder hacer busquedas de recetas por autor. Añadido try/except en la vista para evitar el bug con un usuario que no existe.

--- a/templates/webapp/profile.html
+++ b/templates/webapp/profile.html
@@ -14,8 +14,9 @@
                                     {% else %}{% static 'webapp/image/profile_pic_anon.png' %}{% endif %}">
             <br/>
             <ul class="list-group custom-set">
-                <li class="list-group-item"><span class="badge">10</span>Recipes</li>
-                <li class="list-group-item"><span class="badge">11</span>Friendas</li>
+                <li class="list-group-item"><span class="badge">{{ recipes|length }}</span>Recipes</li>
+                <li class="list-group-item"><span class="badge"><!--{{ followers|length }}--></span>Seguidores</li>
+                <li class="list-group-item"><span class="badge">{{ profile.following|length }}</span><a href="{% url 'following' user.username %}">Seguiendo</a></li>
             </ul>
             <br/>
             {% if profile.user.id == user.id %}
