--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -65,8 +65,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a href="{% url 'profile' user.username %}">Profile</a></li>
-                                    <li><a href="#">My recipes</a></li>
-                                    <li><a href="#">Friends</a></li>
+                                    <li><a href="">Settings</a> </li>
                                     <li class="divider"></li>
                                     <li><a href="{% url 'logout' %}">Logout</a></li>
                                 </ul>
