Implementado los seguidores y los seguidos. Sigue faltando los datos de pruebas para hacer mejores pruebas.

--- a/templates/webapp/following.html
+++ b/templates/webapp/following.html
@@ -8,7 +8,7 @@
 			
 		</div>
 		<div class="col-md-6">
-			<h1>Amigos</h1>
+			<h1>{{ tag }}</h1>
 		</div>
 	</div>
     {% for friend in following %}
