--- a/templates/webapp/profile.html
+++ b/templates/webapp/profile.html
@@ -15,7 +15,7 @@
             <br/>
             <ul class="list-group custom-set">
                 <li class="list-group-item"><span class="badge">{{ recipes|length }}</span>Recipes</li>
-                <li class="list-group-item"><span class="badge">{{ followers_list|length }}</span>Seguidores</li>
+                <li class="list-group-item"><span class="badge">{{ followers_list|length }}</span><a href="{% url 'followers' user.username %}">Seguidores</a></li>
                 <li class="list-group-item"><span class="badge">{{ profile.following|length }}</span><a href="{% url 'following' user.username %}">Seguiendo</a></li>
             </ul>
             <br/>
