Corregido el problema con mostrar la informacion personal del usuario cuando accede a su propio perfil. Se calcula en la vista y se pasa una variable booleana al template.

--- a/templates/webapp/profile.html
+++ b/templates/webapp/profile.html
@@ -159,7 +159,7 @@
             </div>
         </div>
     </div>
-    {% if request.user.username == profile.user.username %}
+    {% if is_owner %}
         <legend>Informaci&oacute;n personal</legend>
         <div class="row">
             <div class="col-md-6">
