--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -5,10 +5,11 @@
 {% block container %}
     <!-- Start Recipe -->
     <!-- Column Left -->
-    <div class="col-md-8 well">
+    <div class="col-md-8 panel panel-default">
         <!-- Start Head Recipe -->
         <div class="recipe-head">
             <!-- End Title and Image Recipe -->
+            <br />
             <div class="recipe-time">
                 <span class="glyphicon glyphicon-time"></span>
 
@@ -90,7 +91,7 @@
     </div>
 
     <!-- Colum Right -->
-    <div class="col-md-3 col-md-offset-1 well">
+    <div class="col-md-3 col-md-offset-1 panel panel-default">
         <!-- Start Mini Image -->
         <div class="recipe-album">
             <h3>Pictures</h3>
