--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -45,10 +45,10 @@
 
                     <div class="input-group navbar-input-group">
                         <form class="navbar-form navbar-left" role="search">
-                            <input type="text" class="form-control" placeholder="Search..." name="srch-term"
+                            <input type="text" class="form-control border-search" placeholder="Search..." name="srch-term"
                                    id="srch-term">
                                 <span class="input-group-btn navbar-input-group-btn">
-                                    <button class="btn btn-default" type="submit">
+                                    <button class="btn btn-default border-default" type="submit">
                                         <i class="glyphicon glyphicon-search"></i>
                                     </button>
                                 </span>
@@ -57,7 +57,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         {% if user.is_authenticated %}
-                            <li><p class="navbar-text">{% trans "Hello" %}, {{ user.profile.get.display_name }}.</p>
+                            <li><p class="navbar-text text-red">{% trans "Hello" %}, {{ user.profile.get.display_name }}.</p>
                             </li>
                             <li class="dropdown">
                                 <a class="profile-image dropdown-toggle" data-toggle="dropdown" href="#">
