--- a/templates/webapp/newrecipe.html
+++ b/templates/webapp/newrecipe.html
@@ -101,8 +101,9 @@
 {% endblock %}
 
 {% block container %}
-
-    <form role="form well well-lg" class="form-horizontal" method="post" enctype="multipart/form-data">
+<div class="panel panel-default">
+<div class="panel-body">
+    <form role="form well-lg" class="form-horizontal" method="post" enctype="multipart/form-data">
     {% csrf_token %}
 
     {% comment %}TODO: poner cada error en su campo
@@ -116,7 +117,7 @@
     {{ form.non_field_errors }}
 
     <h3 class="col-lg-offset-1">Basic information</h3>
-    <fieldset class="well col-sm-10 col-sm-offset-1" style="padding: 20px 100px">
+    <fieldset class="col-sm-10 col-sm-offset-1" style="padding: 20px 100px">
 
         <!-- Title -->
         <div class="form-group">
@@ -176,12 +177,12 @@
     <span class="clearfix"></span>
 
     <h3 class="col-lg-offset-1">How to make it</h3>
-    <fieldset class="well col-sm-10 col-sm-offset-1" style="padding: 20px 100px">
+    <fieldset class="col-sm-10 col-sm-offset-1" style="padding: 20px 100px">
         <!-- Ingredients -->
         <h4>Ingredients list</h4>
 
         <div class="repeat">
-            <div class="form-group well repeatable-wrapper">
+            <div class="form-group repeatable-wrapper">
                 <div class="repeatable-container">
                     <!-- ingredient-item -->
                     <div class="form-group ingredient-item repeatable-row repeatable-template">
@@ -213,7 +214,7 @@
         <h4>Step by step</h4>
 
         <div class="repeat">
-            <div class="form-group well repeatable-wrapper step-list">
+            <div class="form-group repeatable-wrapper step-list">
                 <div class="repeatable-container">
                     <div class="repeatable-row repeatable-template">
                         <div class="form-group step">
@@ -294,7 +295,7 @@
     <span class="clearfix"></span>
 
     <h3 class="col-lg-offset-1">Extra information</h3>
-    <fieldset class="well col-sm-10 col-sm-offset-1" style="padding: 20px 50px">
+    <fieldset class="col-sm-10 col-sm-offset-1" style="padding: 20px 50px">
 
         <div class="row">
             <div class="col-sm-6">
@@ -433,7 +434,7 @@
     <span class="clearfix"></span>
 
     <h3 class="col-lg-offset-1">Savours</h3>
-    <fieldset class="well col-sm-10 col-sm-offset-1" style="padding: 20px 50px">
+    <fieldset class="col-sm-10 col-sm-offset-1" style="padding: 20px 50px">
         <!-- Savours-->
         <div class="col-sm-6">
             <label for="id_{{ form.salty.name }}" class="slider-label">{{ form.salty.label }}</label>
@@ -529,4 +530,6 @@
           style="display: none">
         {% csrf_token %}
     </form>
+</div>
+</div>
 {% endblock %}
