Añadido border-radius: 0px; al starter-template.css para poner los paneles cuadrados.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -507,3 +507,8 @@ header .container {
 .border-white {
     border-color: #fff !important;
 }
+
+.thumbnail, .panel {
+    border-radius: 0px !important;
+    border: 0px solid #cc3e27;
+}
