Clase Badge en css modificado para que tenga el color #cc3e27 como el resto de la web.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -512,3 +512,7 @@ header .container {
     border-radius: 0px !important;
     border: 0px solid #cc3e27;
 }
+
+.badge {
+    background-color: #CC3E27 !important;
+}
