--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -45,7 +45,7 @@
 
                     <div class="input-group navbar-input-group">
                         <form class="navbar-form navbar-left" role="search">
-                            <input type="text" class="form-control border-search" placeholder="Search..." name="srch-term"
+                            <input type="text" class="form-control border-search border-rect" placeholder="Search..." name="srch-term"
                                    id="srch-term">
                                 <span class="input-group-btn navbar-input-group-btn">
                                     <button class="btn btn-default border-default" type="submit">
