--- a/templates/webapp/profile.html
+++ b/templates/webapp/profile.html
@@ -16,8 +16,8 @@
 
             <br/>
             <ul class="list-group custom-set">
-                <li class="list-group-item"><span class="badge">10</span>Recipes</li>
-                <li class="list-group-item"><span class="badge">11</span>Friendas</li>
+                <li class="list-group-item"><span class="badge badge-counter">10</span>Recipes</li>
+                <li class="list-group-item"><span class="badge badge-counter">11</span>Friendas</li>
             </ul>
             <br/>
             {% if profile.user.id == user.id %}
