--- a/templates/webapp/following.html
+++ b/templates/webapp/following.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 
 {% block container %}
+<div class="panel panel-default">
 	<div class="row">
 		<div class="col-md-2">
 			
@@ -44,6 +45,7 @@
 		</div>
 	</div>
 {% endfor %}
+</div>
 	<br />
 	<br />
 	<br />
