--- a/templates/webapp/login.html
+++ b/templates/webapp/login.html
@@ -3,10 +3,9 @@
 {% load i18n %}
 
 {% block container %}
-
     <div class="col-md-4"></div>
     <div class="col-md-4">
-        <form class="well" role="form" action="{% url 'login' %}" method="post">
+        <form class="panel panel-default panel-body" role="form" action="{% url 'login' %}" method="post">
             {% for message in messages %}
                 <div class="alert alert-danger alert-dismissable">
                     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
